@startuml

class Tds{
    int numeroImbrication
    int identifiant
    int identifiantTablePrecedente
    void add()
    void toString()
}

abstract Entry{
    String symbol
    int size

    void toString()
}

class VariableEntry
class FunctionEntry
class TypeEntry
abstract VarFuncEntry


Tds - "*"Entry

Entry <|-- VarFuncEntry
Entry <|-- TypeEntry
VarFuncEntry <|-- VariableEntry
VarFuncEntry <|-- FunctionEntry
TypeEntry <|-- ArrayEntry
TypeEntry <|-- RecordEntry
TypeEntry <|-- AliasEntry

RecordEntry -- "*"FieldEntry
FunctionEntry -- "*"Parameter




@enduml